findbugs BOB/SAM. more to do.